# ImageSegmentation

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/pa5/: main.py  thresholding.py  utils.py
