[project]
name = "pa5"
version = "0.1.0"
description = "UCF Computer Vision PA5: Image Segmentation"
authors = [
    {name = "Ehsan Ayoubi",email = "ehsanayoubi2005@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
